@@ -48,7 +48,7 @@ asset_correlation = 0.0
 
 [risk_outputs]
 insured_losses = true
-all_losses = true
+asset_loss_table = true
 
 [export]
 export_dir = ./
